# OpenGPA

./: .bazelignore  .bazelrc  .gitignore  CLAUDE.md  MODULE.bazel  README.md  pyproject.toml
src/shims/gl/: BUILD.bazel  README.md  dwarf_locations.c  dwarf_locations.h  dwarf_parser.c  dwarf_parser.h  frame_capture.c  frame_capture.h  gl_shim.c  gl_wrappers.c  gl_wrappers.h  http_post.c  http_post.h  ipc_client.c  ipc_client.h  native_trace.c  native_trace.h  pc_to_die.c  pc_to_die.h  shadow_state.c  shadow_state.h  stack_walker.c  stack_walker.h
src/shims/vk/: BUILD.bazel  README.md  bhdr_layer.c  bhdr_layer.h  bhdr_layer.json  gla_layer.c  gpa_layer.c  gpa_layer.h  gpa_layer.json  vk_capture.c  vk_capture.h  vk_dispatch.c  vk_dispatch.h  vk_ipc_client.c  vk_ipc_client.h
src/shims/webgl/: BUILD.bazel  README.md
src/shims/webgl/bridge/: bridge.js  package-lock.json  package.json
src/shims/webgl/extension/: background.js  bhdr-threejs-plugin.js  bhdr-trace.js  content.js  gpa-trace.js  interceptor.js  manifest.json
tests/eval/: BUILD.bazel  README.md  e10_compensating_vp.c  e1_state_leak.c  e2_nan_propagation.c  e3_index_buffer_obo.c  e3_index_buffer_obo.md  e4_double_negation_cull.c  e4_double_negation_cull.md  e5_uniform_collision.c  e6_depth_precision.c  e7_shader_include_order.c  e8_race_texture_upload.c  e9_scissor_not_reset.c  r16_change_shadow_pass_side_selection_logic.c  r17_svg_path_seems_to_render_weird_in_some_c.c  r17_svg_path_seems_to_render_weird_in_some_c.md  r20_webgpu_negative_scale_inverts_front_face.c  r20_webgpu_negative_scale_inverts_front_face.md  r31_weird_r164_webgl_renderer_regression_wit.c  r52_smeary_visuals_with_taa_on_since_switchi.md
tests/eval/e1_state_leak/: scenario.md
tests/eval/e2_nan_propagation/: scenario.md
tests/eval/e5_uniform_collision/: scenario.md
tests/eval/graphics-lib/webgl/gpu_js_685_accessing_textures_within_a_2d_array_is_/: scenario.md  scenario.yaml
tests/eval/r10_feedback_loop_error_with_transmission_an/: scenario.md
tests/eval/r11_transparent_objects_in_three_js/: main.c  scenario.md
tests/eval/r12_omniscale_cleanedge_scaling_issues/: scenario.md
tests/eval/r13_bevy_clustering_vertex_storage_webgpu/: scenario.md
tests/eval/r13_bevy_depth_prepass_skipped_no_opaque/: scenario.md
tests/eval/r13_bevy_no_cpu_culling_runtime_disappears/: scenario.md
tests/eval/r13_bevy_volumetric_fog_postprocess_ordering/: scenario.md
tests/eval/r13_bevy_wireframe_depth_bias_line_topology/: scenario.md
tests/eval/r13_nan_in_projection_matrix_infinite_far/: scenario.md
tests/eval/r15_godot_mobile_renderer_macos_transparent_flicker/: scenario.md
tests/eval/r16_change_shadow_pass_side_selection_logic/: scenario.md
tests/eval/r18_gpuparticles3d_rotation_flicker/: main.c  scenario.md
tests/eval/r19_tilemap_quadrant_batch_flicker_nvidia/: main.c  scenario.md
tests/eval/r1_webgl_backend_instancenode_ubo_exceeds_g/: scenario.md
tests/eval/r20_webgpu_negative_scale_inverts_front_face/: scenario.md
tests/eval/r21_clearcoat_brdf_nan_under_bloom/: scenario.md
tests/eval/r22_csg_gizmo_zfight_coplanar/: scenario.md
tests/eval/r23_using_multiple_alphamask_s_with_renderma/: main.c  scenario.md
tests/eval/r24_enabling_autogeneratemipmaps_breaks_filt/: scenario.md
tests/eval/r25_filters_with_backbuffers_seem_not_to_wor/: scenario.md
tests/eval/r26_incorrect_behavior_in_colormatrixfilter_/: scenario.md
tests/eval/r27_using_maxzoom_with_decimals_on_satellite/: scenario.md
tests/eval/r28_bug_in_rendering_glb_models/: scenario.md
tests/eval/r29_add_an_animated_icon_to_the_map_not_work/: main.c  scenario.md
tests/eval/r2_antialiasing_has_artifacts_when_logarith/: scenario.md
tests/eval/r2_severe_shadow_artifacts_in_webgpurendere/: main.c  scenario.md
tests/eval/r30_incomplete_lines_problem_with_mixing_lay/: main.c  scenario.md
tests/eval/r31_weird_r164_webgl_renderer_regression_wit/: scenario.md
tests/eval/r32_v7_issue_with_custom_points_shader_three/: scenario.md
tests/eval/r33_latest_build_6_38_1_got_glitchy_opacity_/: scenario.md
tests/eval/r34_depth_buffer_issue_when_using_depthoffie/: scenario.md
tests/eval/r3_3d_model_with_transparent_material_rende/: main.c  scenario.md
tests/eval/r3_line2nodematerial_incompatible_with_loga/: scenario.md
tests/eval/r44_4_6_dev3_ssr_glitch_with_half_size_disab/: scenario.md
tests/eval/r4_svgloader_pointstostroke_incorrect_resul/: main.c  scenario.md
tests/eval/r53_subviewport_feedback_loop_screen_shader_godot/: main.c  scenario.md
tests/eval/r54_multimesh_resize_leaves_stale_instance_data/: main.c  scenario.md
tests/eval/r55_msaa_depth_sampled_without_resolve_godot/: main.c  scenario.md
tests/eval/r56_render_priority_ignored_in_transparent_pass/: main.c  scenario.md
tests/eval/r7_color_management_changes_in_three/: main.c  scenario.md
tests/eval/r8_silent_failure_with_invalid_hdr_file_mat/: scenario.md
tests/eval/r8_three_js_resizing_canvas/: scenario.md
tests/eval/r9_blend_modes_not_working_on_all_gpus_and_/: scenario.md
tests/eval/r9_opacity_within_the_same_mesh_depth_order/: scenario.md
tests/eval/s1_stale_texture_unit/: scenario.md
tests/eval/s2_blend_never_enabled/: scenario.md
tests/eval/s3_depth_never_cleared/: scenario.md
tests/eval/s4_fbo_texture_leak/: scenario.md
tests/unit/shims/: BUILD.bazel  README.md  test_bhdr_trace_js_hash.js  test_http_post.c  test_interceptor_debug_groups.js  test_ipc_retry.c  test_native_trace.c  test_shadow_state.c  test_stack_walker.c
tests/unit/shims/fixtures/: BUILD.bazel  trace_fixture.c
(+1038 files in other folders)
