load("@rules_cc//cc:defs.bzl", "cc_binary")

# Each scenario is a directory containing scenario.md + one or more .c files.
# Discover all subdirectories that contain scenario.md, compile their .c files
# into a single cc_binary named after the directory.

# Get scenario directories: every dir that has a scenario.md in it.
_SCENARIO_MDS = glob(["*/scenario.md"])
_SCENARIO_DIRS = [m[:-len("/scenario.md")] for m in _SCENARIO_MDS]

[cc_binary(
    name = d,
    srcs = glob([d + "/*.c"]),
    linkopts = ["-lGL", "-lX11", "-lm"],
) for d in _SCENARIO_DIRS if glob([d + "/*.c"])]
