load("@rules_cc//cc:defs.bzl", "cc_library", "cc_shared_library")

cc_library(
    name = "shadow_state",
    srcs = ["shadow_state.c"],
    hdrs = ["shadow_state.h"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "dwarf_parser",
    srcs = ["dwarf_parser.c"],
    hdrs = ["dwarf_parser.h"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "http_post",
    srcs = ["http_post.c"],
    hdrs = ["http_post.h"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "native_trace",
    srcs = ["native_trace.c"],
    hdrs = ["native_trace.h"],
    linkopts = ["-ldl"],
    deps = [
        ":dwarf_parser",
        ":http_post",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "gpa_gl_impl",
    srcs = [
        "frame_capture.c",
        "gl_shim.c",
        "gl_wrappers.c",
        "ipc_client.c",
    ],
    hdrs = [
        "frame_capture.h",
        "gl_wrappers.h",
        "ipc_client.h",
    ],
    deps = [":shadow_state"],
    visibility = ["//visibility:public"],
)

cc_shared_library(
    name = "gpa_gl",
    deps = [":gpa_gl_impl"],
    visibility = ["//visibility:public"],
)
