load("@rules_cc//cc:defs.bzl", "cc_library", "cc_shared_library")

cc_shared_library(
    name = "VkLayer_bhdr_capture",
    deps = [":vk_layer_impl"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "vk_layer_impl",
    srcs = [
        "bhdr_layer.c",
        "vk_dispatch.c",
        "vk_capture.c",
        "vk_ipc_client.c",
    ],
    hdrs = [
        "bhdr_layer.h",
        "vk_dispatch.h",
        "vk_capture.h",
        "vk_ipc_client.h",
    ],
    copts = ["-I/usr/include"],
    linkopts = [
        "-lrt",
        "-lpthread",
    ],
    deps = ["//src/core:ipc"],
    visibility = ["//visibility:public"],
)
