load("@rules_cc//cc:defs.bzl", "cc_test")

cc_test(
    name = "test_shadow_state",
    srcs = ["test_shadow_state.c"],
    deps = ["//src/shims/gl:shadow_state"],
)

cc_test(
    name = "test_http_post",
    srcs = ["test_http_post.c"],
    linkopts = ["-lpthread"],
    deps = ["//src/shims/gl:http_post"],
)
